--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,14 +13,23 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
 
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Create dist directory
+        run: mkdir -p dist
+
       - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           output: dist/snake.svg?palette=github-dark
+
+      - name: Verify dist contents
+        run: ls -la dist
 
       - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
