--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Create dist directory
+        run: mkdir -p dist
+
       - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
