--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -4,20 +4,16 @@ on:
   schedule:
     - cron: "0 */12 * * *"
   workflow_dispatch:
-  push:
-    branches:
-      - main
 
 jobs:
   generate:
+    runs-on: ubuntu-latest
     permissions:
       contents: write
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Create dist directory
         run: mkdir -p dist
@@ -25,13 +21,13 @@ jobs:
       - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: Laxman-Nath
           output: dist/snake.svg?palette=github-dark
 
-      - name: List files after generation (debug)
+      - name: List files after generation
         run: ls -la dist
 
-      - name: Push snake.svg to the output branch
+      - name: Push snake.svg to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
